# mylang

./: .editorconfig  .flake8  .gitignore  .tool-versions  AGENTS.md  CONTRIBUTING.md  pyproject.toml
brainstorm/: README.org  basic-data.org  caps.org  decorators.org  doc.org  http.org  iteration.org  process.org  test.org  use.my  use.org
gpt/: PROMPT.md
mylang/: __main__.py  cli.py  mylang.lark  parser.py  repl.py  transformer.py
mylang/stdlib/: builtins.py  builtins_.py  shell.my
mylang/stdlib/core/: __init__.py  _context.py  _operators.py  _utils.py  base.py  class_.py  complex.py  context.py  flow.py  func.py  internal.py  primitive.py  special.py  symbol.py
mylang/stdlib/core/_utils/: __init__.py  context.py  exposure.py  object_contract.py  types.py
mylang/stdlib/core/error/: __init__.py
mylang/stdlib/doc/: __init__.py
mylang/stdlib/io/: __init__.py
mylang/stdlib/process/: __init__.py
mylang/stdlib/repl/: __init__.py  state.py
mylang/stdlib/shell/: __init__.py
mylang/stdlib/ui/: keyboard.py  term.py
scripts/: gpt-prepare-files.sh
tests/: test_parser.py  test_repl.py  test_transformer.py
tests/flows/: README.md  class.my  context.my  errors.my  for.my  getset.my  if_else.my  lexical_scope.my  loop.my  operators.my  path_getset.my  recursion.my  ref.my  symbol.my  test_flows.py  use_importee.my  use_importer.my
tests/stdlib/: test_core.py
tools/lsp/: README.md  package.json
tools/lsp/src/: main.ts
tools/vscode/: package.json  tsconfig.json
tools/vscode/src/: extension.ts
