[project]
name = "mylang"
version = "0.1.0"
description = "A new kind of programming language"
authors = [
    {name = "Haris Gušić", email = "harisgusic.dev@gmail.com"},
]
requires-python = ">=3.10"
dependencies = ["lark~=1.2"]
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
mylang = "mylang.__main__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "ipython>=8.37.0",
    "pytest>=8.4.1",
    "debugpy>=1.8.15",
    "flake8~=7.3",
    "pylint~=3.3",
    "pre-commit>=3.0.0",
]

[tool.pyright]
executionEnvironments = [
    { root = "tests", extraPaths = [ "." ] }
]

[tool.pdm]
distribution = true

[tool.flake8]
max-line-length = 120

[tool.pylint.messages_control]
disable = "missing-class-docstring, too-few-public-methods, no-else-return"

[tool.pylint.format]
max-line-length = 120

[tool.black]
line-length = 120
